Required adaptions in function 'release()'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ importFrom(sf,st_drop_geometry)
 importFrom(sf,st_nearest_feature)
 importFrom(sf,st_read)
 importFrom(specimens,as_data.frame)
+importFrom(taxlist,dissect_name)
+importFrom(taxlist,replace_x)
 importFrom(utils,askYesNo)
 importFrom(yamlme,render_rmd)
 importFrom(yamlme,txt_body)
