New option importing data without administrative units

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(sf,st_coordinates)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_nearest_feature)
 importFrom(sf,st_read)
+importFrom(taxlist,replace_x)
 importFrom(utils,askYesNo)
 importFrom(yamlme,render_rmd)
 importFrom(yamlme,txt_body)
