--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,13 @@ S3method(write_labels,specimens)
 export(read_spec)
 export(release)
 export(write_labels)
-exportMethods(update_det)
+exportMethods(new_coll)
+exportMethods(new_det)
 importClassesFrom(RPostgreSQL,PostgreSQLConnection)
 importClassesFrom(specimens,specimens)
 importClassesFrom(yamlme,rmd_doc)
 importFrom(DBI,dbGetQuery)
+importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,setOldClass)
 importFrom(rpostgis,pgInsert)
