--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 S3method(read_spec,PostgreSQLConnection)
 S3method(release,specimens)
+S3method(split_spec,PostgreSQLConnection)
 S3method(write_labels,specimens)
 export(read_spec)
 export(release)
+export(split_spec)
 export(write_labels)
 exportMethods(new_coll)
 exportMethods(new_det)
