--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,19 @@
 
 S3method(read_spec,PostgreSQLConnection)
 S3method(release,specimens)
+S3method(split_spec,PostgreSQLConnection)
 S3method(write_labels,specimens)
 export(read_spec)
 export(release)
+export(split_spec)
 export(write_labels)
-exportMethods(update_det)
+exportMethods(new_coll)
+exportMethods(new_det)
 importClassesFrom(RPostgreSQL,PostgreSQLConnection)
 importClassesFrom(specimens,specimens)
 importClassesFrom(yamlme,rmd_doc)
 importFrom(DBI,dbGetQuery)
+importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,setOldClass)
 importFrom(rpostgis,pgInsert)
