--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,12 @@
 
 S3method(read_spec,PostgreSQLConnection)
 S3method(release,specimens)
+S3method(render_desc,PostgreSQLConnection)
 S3method(split_spec,PostgreSQLConnection)
 S3method(write_labels,specimens)
 export(read_spec)
 export(release)
+export(render_desc)
 export(split_spec)
 export(write_labels)
 exportMethods(new_coll)
