New function to write envelopes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(read_spec,PostgreSQLConnection)
 S3method(release,specimens)
 S3method(render_desc,PostgreSQLConnection)
 S3method(split_spec,PostgreSQLConnection)
+S3method(write_envelopes,specimens)
 S3method(write_labels,specimens)
 export(description_sheet)
 export(project_list)
@@ -13,6 +14,7 @@ export(read_spec)
 export(release)
 export(render_desc)
 export(split_spec)
+export(write_envelopes)
 export(write_labels)
 exportMethods(new_coll)
 exportMethods(new_det)
