Package adapted to new version of 'yamlme'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,9 +18,10 @@ export(write_envelopes)
 export(write_labels)
 exportMethods(new_coll)
 exportMethods(new_det)
+import(specimens)
+import(yamlme)
 importClassesFrom(RPostgreSQL,PostgreSQLConnection)
 importClassesFrom(specimens,specimens)
-importClassesFrom(yamlme,rmd_doc)
 importFrom(DBI,dbGetQuery)
 importFrom(leaflet,addCircleMarkers)
 importFrom(leaflet,addMiniMap)
@@ -30,6 +31,7 @@ importFrom(leaflet,leaflet)
 importFrom(magrittr,"%>%")
 importFrom(mapview,mapshot)
 importFrom(methods,as)
+importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,setOldClass)
 importFrom(rpostgis,pgInsert)
@@ -37,10 +39,6 @@ importFrom(sf,st_coordinates)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_nearest_feature)
 importFrom(sf,st_read)
-importFrom(specimens,as_data.frame)
 importFrom(taxlist,dissect_name)
 importFrom(taxlist,replace_x)
 importFrom(utils,askYesNo)
-importFrom(yamlme,render_rmd)
-importFrom(yamlme,txt_body)
-importFrom(yamlme,write_rmd)
