--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Authors@R:
 		role=c("aut","cre"), comment=c(ORCID="0000-0003-1500-1834"))
 Depends:
 	R(>= 4.0.0),
-	specimens
+	specimens,
+	yamlme
 Imports:
     DBI,
     leaflet,
@@ -18,10 +19,9 @@ Imports:
 	RPostgreSQL,
     sf,
     taxlist,
-    utils,
-    yamlme
+    utils
 Remotes:
-	github::kamapu/specimens
+	github::kamapu/specimens,
 Suggests:
 	rmarkdown,
 	testthat
@@ -32,4 +32,4 @@ Roxygen: list(markdown = TRUE)
 License: file LICENSE
 URL: https://github.com/kamapu/specimensDB
 BugReports: https://github.com/kamapu/specimensDB/issues
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.2
