Functions adapted to new yamlme object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(description_sheet,PostgreSQLConnection)
 S3method(project_list,PostgreSQLConnection)
-S3method(read_spec,PostgreSQLConnection)
+S3method(read_specimens,PostgreSQLConnection)
 S3method(release,specimens)
 S3method(render_desc,PostgreSQLConnection)
 S3method(split_spec,PostgreSQLConnection)
@@ -10,7 +10,7 @@ S3method(write_envelopes,specimens)
 S3method(write_labels,specimens)
 export(description_sheet)
 export(project_list)
-export(read_spec)
+export(read_specimens)
 export(release)
 export(render_desc)
 export(split_spec)
