--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R:
 		role=c("aut","cre"), comment=c(ORCID="0000-0003-1500-1834"))
 Depends:
 	R(>= 4.0.0),
+	divDB,
 	specimens,
 	yamlme
 Imports:
@@ -21,7 +22,9 @@ Imports:
     taxlist,
     utils
 Remotes:
+    github::kamapu/divDB,
 	github::kamapu/specimens,
+	github::kamapu/yamlme
 Suggests:
 	rmarkdown,
 	testthat
