--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,25 +4,27 @@ S3method(description_sheet,PostgreSQLConnection)
 S3method(project_list,PostgreSQLConnection)
 S3method(read_specimens,PostgreSQLConnection)
 S3method(release,specimens)
-S3method(render_desc,PostgreSQLConnection)
-S3method(split_spec,PostgreSQLConnection)
+S3method(render_description,PostgreSQLConnection)
+S3method(split_specimens,PostgreSQLConnection)
 S3method(write_envelopes,specimens)
 S3method(write_labels,specimens)
 export(description_sheet)
 export(project_list)
 export(read_specimens)
 export(release)
-export(render_desc)
-export(split_spec)
+export(render_description)
+export(split_specimens)
 export(write_envelopes)
 export(write_labels)
-exportMethods(new_coll)
+exportMethods(insert_collection)
 exportMethods(new_det)
+import(divDB)
 import(specimens)
 import(yamlme)
 importClassesFrom(RPostgreSQL,PostgreSQLConnection)
 importClassesFrom(specimens,specimens)
 importFrom(DBI,dbGetQuery)
+importFrom(DBI,dbWriteTable)
 importFrom(leaflet,addCircleMarkers)
 importFrom(leaflet,addMiniMap)
 importFrom(leaflet,addProviderTiles)
