--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,24 +2,29 @@
 
 S3method(description_sheet,PostgreSQLConnection)
 S3method(project_list,PostgreSQLConnection)
-S3method(read_spec,PostgreSQLConnection)
+S3method(read_specimens,PostgreSQLConnection)
 S3method(release,specimens)
-S3method(render_desc,PostgreSQLConnection)
-S3method(split_spec,PostgreSQLConnection)
+S3method(render_description,PostgreSQLConnection)
+S3method(split_specimens,PostgreSQLConnection)
+S3method(write_envelopes,specimens)
 S3method(write_labels,specimens)
 export(description_sheet)
 export(project_list)
-export(read_spec)
+export(read_specimens)
 export(release)
-export(render_desc)
-export(split_spec)
+export(render_description)
+export(split_specimens)
+export(write_envelopes)
 export(write_labels)
-exportMethods(new_coll)
+exportMethods(insert_collection)
 exportMethods(new_det)
+import(divDB)
+import(specimens)
+import(yamlme)
 importClassesFrom(RPostgreSQL,PostgreSQLConnection)
 importClassesFrom(specimens,specimens)
-importClassesFrom(yamlme,rmd_doc)
 importFrom(DBI,dbGetQuery)
+importFrom(DBI,dbWriteTable)
 importFrom(leaflet,addCircleMarkers)
 importFrom(leaflet,addMiniMap)
 importFrom(leaflet,addProviderTiles)
@@ -28,6 +33,7 @@ importFrom(leaflet,leaflet)
 importFrom(magrittr,"%>%")
 importFrom(mapview,mapshot)
 importFrom(methods,as)
+importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,setOldClass)
 importFrom(rpostgis,pgInsert)
@@ -35,10 +41,6 @@ importFrom(sf,st_coordinates)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_nearest_feature)
 importFrom(sf,st_read)
-importFrom(specimens,as_data.frame)
 importFrom(taxlist,dissect_name)
 importFrom(taxlist,replace_x)
 importFrom(utils,askYesNo)
-importFrom(yamlme,render_rmd)
-importFrom(yamlme,txt_body)
-importFrom(yamlme,write_rmd)
