--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,setOldClass)
-importFrom(rpostgis,pgInsert)
+importFrom(rpostgis,pgWriteGeom)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_nearest_feature)
