description_sheet using mapshot2().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,7 @@ importFrom(leaflet,addProviderTiles)
 importFrom(leaflet,addScaleBar)
 importFrom(leaflet,leaflet)
 importFrom(magrittr,"%>%")
-importFrom(mapview,mapshot)
+importFrom(mapview,mapshot2)
 importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,new)
